# steamdual

./: .gitignore  README.md
.claude/: launch.json
.github/workflows/: build.yml
SteamBPClone/: DESIGN_LANGUAGE.md  app.js  index.html
SteamBPClone/styles/: app.css  tokens.css
app/: README.md  index.html  package-lock.json  package.json  vite.config.js
app/src/: App.jsx  main.jsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/examples/: probe.rs
app/src-tauri/src/: disk.rs  exec.rs  lib.rs  main.rs  ops.rs  planning.rs  state.rs  types.rs  unattend.rs
app/src/components/: Footer.jsx
app/src/hooks/: useGamepadFocus.js
app/src/lib/: engine.js  format.js
app/src/steps/: ConfigPane.jsx  DoneStep.jsx  ExecuteStep.jsx  IsoStep.jsx  ReviewStep.jsx  SizeStep.jsx  Welcome.jsx
app/src/styles/: components.css  wizard.css
bootloader/: Cargo.toml  README.md  build.rs
bootloader/.cargo/: config.toml
bootloader/src/: assets.rs  chainload.rs  config.rs  gop.rs  input.rs  main.rs  text.rs  theme.rs  ui.rs
flatpak/: com.steamdualboot.app.desktop  com.steamdualboot.app.metainfo.xml  com.steamdualboot.app.yml
scripts/: run-bootloader.sh  test-engine-loopback.sh
