[package]
name = "steamdualboot"
version = "0.1.0"
description = "Guided Windows 11 dual-boot setup for the Steam Deck"
edition = "2021"
rust-version = "1.77"

[lib]
name = "steamdualboot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[features]
# Disabled by default so a normal `cargo build` never touches a real disk.
# Enabled only in the production build that runs on the Deck.
live = []
